<resources>
    <string name="app_name">Kotlin Calculator</string>
    <string name="calculator_visor_default">0</string>
    <string name="number_0">0</string>
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="number_7">7</string>
    <string name="number_8">8</string>
    <string name="number_9">9</string>
    <string name="equal_sign">=</string>
    <string name="point_sign">.</string>
    <string name="plus_sign">+</string>
    <string name="minus_sign">-</string>
    <string name="product_sign">×</string>
    <string name="divide_sign">/</string>
    <string name="backspace_sign">⌫</string>
    <string name="error_invalid_operation">The operation is not valid</string>

</resources>
