<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text_calculator_visor"
        android:layout_width="match_parent"
        android:layout_height="@dimen/calculator_visor_height"
        android:background="@color/material_red_400"
        android:elevation="4dp"
        android:gravity="center|end"
        android:paddingStart="@dimen/margin_all_xsmall_8"
        android:paddingEnd="@dimen/margin_all_xsmall_8"
        android:text="@string/calculator_visor_default"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_calculator_visor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_7"
        style="@style/Button.Calculator.Number"
        android:text="@string/number_7"
        app:layout_constraintBottom_toTopOf="@id/button_4"
        app:layout_constraintEnd_toStartOf="@id/button_8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_calculator_visor" />

    <Button
        android:id="@+id/button_8"
        style="@style/Button.Calculator.Number"
        android:text="@string/number_8"
        app:layout_constraintBottom_toTopOf="@id/button_5"
        app:layout_constraintEnd_toStartOf="@id/button_9"
        app:layout_constraintStart_toEndOf="@id/button_7"
        app:layout_constraintTop_toBottomOf="@+id/text_calculator_visor" />

    <Button
        android:id="@+id/button_9"
        style="@style/Button.Calculator.Number"
        android:text="@string/number_9"
        app:layout_constraintBottom_toTopOf="@id/button_6"
        app:layout_constraintEnd_toStartOf="@id/button_plus"
        app:layout_constraintStart_toEndOf="@id/button_8"
        app:layout_constraintTop_toBottomOf="@+id/text_calculator_visor" />

    <Button
        android:id="@+id/button_4"
        style="@style/Button.Calculator.Number"
        android:text="@string/number_4"
        app:layout_constraintBottom_toTopOf="@id/button_1"
        app:layout_constraintEnd_toStartOf="@id/button_5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_7" />

    <Button
        android:id="@+id/button_5"
        style="@style/Button.Calculator.Number"
        android:text="@string/number_5"
        app:layout_constraintBottom_toTopOf="@id/button_2"
        app:layout_constraintEnd_toStartOf="@id/button_6"
        app:layout_constraintStart_toEndOf="@id/button_4"
        app:layout_constraintTop_toBottomOf="@+id/button_8" />

    <Button
        android:id="@+id/button_6"
        style="@style/Button.Calculator.Number"
        android:text="@string/number_6"
        app:layout_constraintBottom_toTopOf="@id/button_3"
        app:layout_constraintEnd_toStartOf="@id/button_minus"
        app:layout_constraintStart_toEndOf="@id/button_5"
        app:layout_constraintTop_toBottomOf="@+id/button_9" />

    <Button
        android:id="@+id/button_1"
        style="@style/Button.Calculator.Number"
        android:text="@string/number_1"
        app:layout_constraintBottom_toTopOf="@id/button_point"
        app:layout_constraintEnd_toStartOf="@id/button_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_4" />

    <Button
        android:id="@+id/button_2"
        style="@style/Button.Calculator.Number"
        android:text="@string/number_2"
        app:layout_constraintBottom_toTopOf="@id/button_0"
        app:layout_constraintEnd_toStartOf="@id/button_3"
        app:layout_constraintStart_toEndOf="@id/button_1"
        app:layout_constraintTop_toBottomOf="@+id/button_5" />

    <Button
        android:id="@+id/button_3"
        style="@style/Button.Calculator.Number"
        android:text="@string/number_3"
        app:layout_constraintBottom_toTopOf="@id/button_equal"
        app:layout_constraintEnd_toStartOf="@id/button_product"
        app:layout_constraintStart_toEndOf="@id/button_2"
        app:layout_constraintTop_toBottomOf="@+id/button_6" />

    <Button
        android:id="@+id/button_point"
        style="@style/Button.Calculator.Operation"
        android:text="@string/point_sign"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_1" />

    <Button
        android:id="@+id/button_0"
        style="@style/Button.Calculator.Number"
        android:text="@string/number_0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_equal"
        app:layout_constraintStart_toEndOf="@id/button_point"
        app:layout_constraintTop_toBottomOf="@+id/button_2" />

    <Button
        android:id="@+id/button_equal"
        style="@style/Button.Calculator.Operation"
        android:text="@string/equal_sign"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_divide"
        app:layout_constraintStart_toEndOf="@id/button_0"
        app:layout_constraintTop_toBottomOf="@+id/button_3" />

    <Button
        android:id="@+id/button_backspace"
        style="@style/Button.Calculator.Operation"
        android:textSize="@dimen/text_calculator_number_button"
        android:layout_marginStart="1dp"
        android:text="@string/backspace_sign"
        app:layout_constraintBottom_toTopOf="@id/button_plus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_9"
        app:layout_constraintTop_toBottomOf="@+id/text_calculator_visor" />

    <Button
        android:id="@+id/button_plus"
        style="@style/Button.Calculator.Operation"
        android:layout_marginStart="1dp"
        android:text="@string/plus_sign"
        app:layout_constraintBottom_toTopOf="@id/button_minus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_9"
        app:layout_constraintTop_toBottomOf="@+id/button_backspace" />

    <Button
        android:id="@+id/button_minus"
        style="@style/Button.Calculator.Operation"
        android:layout_marginStart="1dp"
        android:text="@string/minus_sign"
        app:layout_constraintBottom_toTopOf="@id/button_product"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_6"
        app:layout_constraintTop_toBottomOf="@+id/button_plus" />

    <Button
        android:id="@+id/button_product"
        style="@style/Button.Calculator.Operation"
        android:layout_marginStart="1dp"
        android:text="@string/product_sign"
        app:layout_constraintBottom_toTopOf="@id/button_divide"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_3"
        app:layout_constraintTop_toBottomOf="@+id/button_minus" />

    <Button
        android:id="@+id/button_divide"
        style="@style/Button.Calculator.Operation"
        android:layout_marginStart="1dp"
        android:text="@string/divide_sign"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_equal"
        app:layout_constraintTop_toBottomOf="@+id/button_product" />

</android.support.constraint.ConstraintLayout>